# kpedit

./: README.md  kpedit.pro
kpedit/: kpedit.pro
kpedit/doc/: ChangeLog  README  kpedit.desktop  kpedit.xpm
kpedit/src/: aboutdialog.cpp  aboutdialog.h  exportdialog.cpp  exportdialog.h  interfaces.h  keypoint.h  kpplayer.cpp  kpplayer.h  linkdialog.cpp  linkdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  previewwidget.cpp  previewwidget.h  renderdialog.cpp  renderdialog.h  version.h  version.h.in
kpedit/templates/: skeleton-13.csv  skeleton-15.csv  skeleton-16.csv  skeleton-20.csv
kpedit/ui/: aboutdialog.ui  exportdialog.ui  kpplayer.ui  linkdialog.ui  mainwindow.ui  renderdialog.ui
kpedit_plugin_template/: CMakeLists.txt  plugin.cpp  plugin.h  plugindialog.cpp  plugindialog.h  plugindialog.ui
plugins/: plugins.pro
plugins/boundplugin/: boundplugin.pro  plugin.cpp  plugin.h  plugindialog.cpp  plugindialog.h  plugindialog.ui
plugins/jsonplugin/: jsonplugin.pro  plugin.cpp  plugin.h
plugins/polinterplugin/: pidialog.cpp  pidialog.h  pidialog.ui  polinter.cpp  polinter.h  polinterplugin.cpp  polinterplugin.h  polinterplugin.pro
plugins/removerplugin/: plugin.cpp  plugin.h  plugindialog.cpp  plugindialog.ui  removerplugin.pro
plugins/renderplugin/: plugin.cpp  plugin.h  plugindialog.cpp  plugindialog.h  plugindialog.ui  renderplugin.pro
plugins/roundplugin/: rounddialog.cpp  rounddialog.h  rounddialog.ui  roundplugin.cpp  roundplugin.h  roundplugin.pro
plugins/scaleplugin/: plugin.cpp  plugin.h  plugindialog.cpp  plugindialog.h  plugindialog.ui  (+1 more)
(+15 files in other folders)
