CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

SET(TARGET_NAME kpplugin_template)
PROJECT(kpplugin_template)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

ADD_DEFINITIONS(-DQT_PLUGIN -DQT_SHARED)
SET( LIBRARY_OUTPUT_PATH ${PLUGINS_OUTPUT_DIR} )

SET (HEADERS 
${MAIN_APP_DIR}/src/interfaces.h 
${MAIN_APP_DIR}/src/keypoint.h
)

SET (QT_HEADERS 
plugin.h 
plugindialog.h
)

SET (SOURCES 
plugin.cpp 
plugindialog.cpp
)

SET (RESOURCES )

SET (FORMS 
plugindialog.ui
)

QT4_WRAP_CPP(HEADERS_MOC ${QT_HEADERS})
QT4_WRAP_UI(FORMS_HEADERS ${FORMS})
QT4_ADD_RESOURCES(RESOURCES_RCC ${RESOURCES})

ADD_LIBRARY(${TARGET_NAME} SHARED ${SOURCES} ${HEADERS_MOC} ${FORMS_HEADERS} ${RESOURCES_RCC})
TARGET_LINK_LIBRARIES(${TARGET_NAME} ${QT_LIBRARIES})

IF(UNIX)
	INSTALL(TARGETS ${TARGET_NAME} DESTINATION ${PLUGINS_INSTALL_DIR})
ENDIF(UNIX)
